[tool.poetry]
name = "react_agent_function_calling"
version = "0.1.0"
description = ""
authors = ["Gianluca Lambruschini <gianluca.lambruschini@gmail.com>"]
packages = [{include = "react_agent_function_calling"}]


[tool.poetry.dependencies]
    python = "^3.11"
    langchain = "^1.3.1"
    langchain-ollama = "^1.1.0"
    langchain-tavily = "^0.2.18"
    langgraph = "^1.2.0"
    python-dotenv = "^1.2.2"
    black = "^26.5.1"
    isort = "^8.0.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
